setting project using typescript

--- a/package.json
+++ b/package.json
@@ -15,11 +15,32 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
+    "@types/expo": "^32.0.13",
+    "@types/react": "^16.8.19",
+    "@types/react-native": "^0.57.60",
+    "@types/react-native-vector-icons": "^6.4.1",
+    "@types/react-navigation": "^3.0.7",
     "babel-preset-expo": "^5.0.0",
-    "jest-expo": "^32.0.0"
+    "jest-expo": "^32.0.0",
+    "prettier": "^1.17.1",
+    "prettier-tslint": "^0.4.2",
+    "tsconfig-kodefox": "^1.0.1",
+    "tslint": "^5.17.0",
+    "tslint-config-kodefox": "^1.1.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.0.1",
+    "tslint-react": "^4.0.0",
+    "typescript": "^3.3.0"
+  },
+  "prettier": {
+    "bracketSpacing": false,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "arrowParens": "always"
   },
   "private": true
 }
